--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="pantalla" class=" js-screen calculator__table">Hola Mateo :)</div>
+        <div id="pantalla" class=" js-screen calculator__table"></div>
         <div class="calculator__botton">
             <div class="calculator__content">
                 <div class=" js-seven calculator__content-item">7</div>
