--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="pantalla" class=" js-screen calculator__table"></div>
+        <div class=" js-screen calculator__table">0</div>
         <div class="calculator__botton">
             <div class="calculator__content">
                 <div class=" js-seven calculator__content-item">7</div>
@@ -23,10 +23,10 @@
                 <div class=" js-less calculator__content-item calculator__content-item--margin">-</div>
             </div>
             <div class="calculator__content">
-                <div id="numero"  class=" js-one calculator__content-item">1</div>
+                <div class=" js-one calculator__content-item">1</div>
                 <div class=" js-two calculator__content-item">2</div>
                 <div class=" js-three calculator__content-item">3</div>
-                <div class=" js-for calculator__content-item calculator__content-item--margin">*</div>
+                <div class=" js-x calculator__content-item calculator__content-item--margin">*</div>
             </div>
             <div class="calculator__content">
                 <div class=" js-ce calculator__content-item">CE</div>
