--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
 </head>
 <body>
     <div class="calculator">
-        <div class=" js-screen calculator__table">0</div>
+        <div class="js-screen calculator__table">Hola Moises ;)</div>
         <div class="calculator__botton">
             <div class="calculator__content">
-                <div class=" js-seven calculator__content-item">7</div>
-                <div class=" js-eight calculator__content-item">8</div>
-                <div class=" js-nine calculator__content-item">9</div>
-                <div class=" js-more calculator__content-item calculator__content-item--margin">+</div>
+                <div class="js-number calculator__content-item">7</div>
+                <div class="js-number calculator__content-item">8</div>
+                <div class="js-number calculator__content-item">9</div>
+                <div class="js-more calculator__content-item calculator__content-item--margin">+</div>
             </div>
             <div class="calculator__content">
-                <div class=" js-four calculator__content-item">4</div>
-                <div class=" js-five calculator__content-item">5</div>
-                <div class=" js-six calculator__content-item">6</div>
-                <div class=" js-less calculator__content-item calculator__content-item--margin">-</div>
+                <div class="js-number calculator__content-item">4</div>
+                <div class="js-number calculator__content-item">5</div>
+                <div class="js-number calculator__content-item">6</div>
+                <div class="js-less calculator__content-item calculator__content-item--margin">-</div>
             </div>
             <div class="calculator__content">
-                <div class=" js-one calculator__content-item">1</div>
-                <div class=" js-two calculator__content-item">2</div>
-                <div class=" js-three calculator__content-item">3</div>
-                <div class=" js-x calculator__content-item calculator__content-item--margin">*</div>
+                <div class="js-number calculator__content-item">1</div>
+                <div class="js-number calculator__content-item">2</div>
+                <div class="js-number calculator__content-item">3</div>
+                <div class="js-x calculator__content-item calculator__content-item--margin">*</div>
             </div>
             <div class="calculator__content">
-                <div class=" js-ce calculator__content-item">CE</div>
-                <div class=" js-zero calculator__content-item">0</div>
-                <div class=" js-equal calculator__content-item">=</div>
-                <div class=" js-slash calculator__content-item calculator__content-item--margin">/</div>
+                <div class="js-ce calculator__content-item">CE</div>
+                <div class="js-number calculator__content-item">0</div>
+                <div class="js-equal calculator__content-item">=</div>
+                <div class="js-slash calculator__content-item calculator__content-item--margin">/</div>
             </div>
         </div>
     </div>
